// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiContextMenuPanel testClass1 testClass2"
  data-test-subj="test subject string"
  tabindex="0"
>
  <div>
    Hello
  </div>
</div>
`;

exports[`EuiContextMenuPanel props onClose renders a button as a title 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="0"
>
  <button
    class="euiContextMenuPanelTitle"
    data-test-subj="contextMenuPanelTitleButton"
    type="button"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      <svg
        class="euiIcon euiContextMenu__icon euiIcon--medium"
      >
        <title>
          arrow left icon
        </title>
        <use
          href="#arrow_left"
        />
      </svg>
      <span
        class="euiContextMenu__text"
      >
        Title
      </span>
    </span>
  </button>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props title is rendered 1`] = `
<div
  class="euiContextMenuPanel"
  tabindex="0"
>
  <div
    class="euiPopoverTitle"
  >
    <span
      class="euiContextMenu__itemLayout"
    >
      Title
    </span>
  </div>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInLeft"
  tabindex="0"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection next with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutLeft"
  tabindex="0"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType in is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txInRight"
  tabindex="0"
>
  <div />
</div>
`;

exports[`EuiContextMenuPanel props transitionDirection previous with transitionType out is rendered 1`] = `
<div
  class="euiContextMenuPanel euiContextMenuPanel-txOutRight"
  tabindex="0"
>
  <div />
</div>
`;
